--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+certifi==2021.10.8
+charset-normalizer==2.0.8
+idna==3.3
+importlib-metadata==4.8.2
 libsass==0.21.0
-Mako==1.1.5
-Markdown==3.3.4
+Mako==1.1.6
+Markdown==3.3.6
 MarkupSafe==2.0.1
+Pillow==8.4.0
 python-frontmatter==1.0.0
-PyYAML==5.1
+PyYAML==6.0
+requests==2.26.0
 six==1.16.0
+urllib3==1.26.7
+zipp==3.6.0
