--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.0.1
 Pillow==8.4.0
+pypandoc==1.7.2
 python-frontmatter==1.0.0
 PyYAML==6.0
 requests==2.26.0
