--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==2.0.8
 idna==3.3
 importlib-metadata==4.8.2
 libsass==0.21.0
+lunr==0.6.2
 Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.0.1
