--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-bottle==0.12.25
-certifi==2024.7.4
-charset-normalizer==3.3.2
-idna==3.7
-importlib-metadata==8.0.0
+bottle==0.13.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+idna==3.10
+importlib_metadata==8.5.0
+inflect==7.3.1
+Jinja2==3.1.4
 libsass==0.23.0
-lunr==0.7.0
-Mako==1.3.5
-Markdown==3.6
-MarkupSafe==2.1.5
-Pillow==10.4.0
-pymdown-extensions==10.8.1
-pypandoc==1.13
+lunr==0.7.0.post1
+Mako==1.3.6
+Markdown==3.7
+MarkupSafe==3.0.2
+pillow==11.0.0
+pymdown-extensions==10.12
+pypandoc==1.14
 python-frontmatter==1.1.0
-PyYAML==6.0.1
+PyYAML==6.0.2
 requests==2.32.3
 six==1.16.0
-urllib3==2.2.2
-zipp==3.19.2
+urllib3==2.2.3
+wheel==0.43.0
+zipp==3.20.2
